<resources>
    <string name="app_name">NUMAD21S-EliasMitsolides</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Back To Hello World</string>
    <string name="about_elias">About Me</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_world">Hello World!</string>
    <string name="elias_name">Elias Mitsolides</string>
    <string name="elias_email">mitsolides.e@husky.neu.edu</string>
    <string name="elias_name_email">Elias Mitsolides : mitsolides.e@husky.neu.edu</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="letter_of_button_f">F</string>
    <string name="letter_pressed">Letter Pressed:</string>
    <string name="letter_of_button_e">E</string>
    <string name="letter_of_button_d">D</string>
    <string name="letter_of_button_c">C</string>
    <string name="letter_of_button_b">B</string>
    <string name="letter_of_button_a">A</string>
    <string name="letter_activity">Letter Activity</string>
    <string name="item_name">item_name</string>
    <string name="url">URL</string>
    <string name="type_a_url_below">Type A URL Below</string>
    <string name="addlink">Add Link</string>
    <string name="cancel">Cancel</string>
    <string name="link_name">Link Name</string>
    <string name="latitude_amp_longitude"><![CDATA[Latitude & Longitude]]></string>
    <string name="your_current_latitude">Your Current Latitude: </string>
    <string name="your_current_longitude">Your Current Longitude: </string>
    <string name="picture_library">Picture Library</string>
    <string name="choose_a_number_between_1_and_5000">Choose A Number Between 1 And 5000</string>
    <string name="between_1_and_5000">Between 1 And 5000...</string>
    <string name="get_photo">Get Photo</string>
    <string name="this_is_where_a_retrieved_image_will_be_rendered">This Is Where A Retrieved Image Will Be Rendered</string>
    <string name="note_a_web_browser_will_be_opened_displaying_your_image">Note: A Web Browser Will Be Opened Displaying Your Image</string>
</resources>